--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc src/*.ts --outDir ._dist_",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc src/**/*.ts --outDir _dist_",
+    "test": "jest"
   },
   "author": "leo",
   "license": "ISC",
@@ -13,9 +13,13 @@
     "javascript-algorithms-and-data-structures": "https://github.com/trekhleb/javascript-algorithms.git"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.23",
     "@typescript-eslint/eslint-plugin": "^4.28.1",
     "@typescript-eslint/parser": "^4.28.1",
     "eslint": "^7.30.0",
+    "jest": "^27.0.6",
+    "ts-jest": "^27.0.3",
+    "ts-node": "^10.0.0",
     "typescript": "^4.3.5"
   }
 }
