--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@typescript-eslint/eslint-plugin": "^4.28.1",
     "@typescript-eslint/parser": "^4.28.1",
     "eslint": "^7.30.0",
+    "eslint-plugin-jest": "^24.3.6",
     "jest": "^27.0.6",
     "ts-jest": "^27.0.3",
     "ts-node": "^10.0.0",
