--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc src/**/*.ts --outDir _dist_",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint ./src/**",
+    "prepare": "husky install",
+    "coverage": "npm run test -- --coverage",
+    "build": "tsc src/**/*.ts --outDir _dist_"
   },
   "author": "leo",
   "license": "ISC",
@@ -18,6 +21,7 @@
     "@typescript-eslint/parser": "^4.28.1",
     "eslint": "^7.30.0",
     "eslint-plugin-jest": "^24.3.6",
+    "husky": "^7.0.1",
     "jest": "^27.0.6",
     "ts-jest": "^27.0.3",
     "ts-node": "^10.0.0",
