--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest",
     "lint": "eslint ./src/**",
     "prepare": "husky install",
+    "postinstall": "node ./node_modules/.bin/husky install",
     "coverage": "yarn run test -- --coverage",
     "build": "tsc src/**/*.ts --outDir _dist_"
   },
@@ -21,7 +22,7 @@
     "@typescript-eslint/parser": "^4.28.1",
     "eslint": "^7.30.0",
     "eslint-plugin-jest": "^24.3.6",
-    "husky": "^7.0.0",
+    "husky": "^7.0.2",
     "jest": "^27.0.6",
     "prettier": "^2.3.2",
     "pretty-quick": "^3.1.1",
