--- a/.github/workflows/coverage-test.yml
+++ b/.github/workflows/coverage-test.yml
@@ -22,7 +22,8 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
 
-      - name: Build
-        run: |
-          yarn install --force
-          yarn coverage
+      - name: Install dependencies
+        run: yarn --frozen-lockfile --force
+
+      - name: Coverage
+        run: yarn coverage
