--- a/.github/workflows/coverage-test.yml
+++ b/.github/workflows/coverage-test.yml
@@ -23,7 +23,9 @@ jobs:
           node-version: ${{ matrix.node-version }}
 
       - name: Install dependencies
-        run: yarn --frozen-lockfile --force
+        run: |
+          yarn cache clean
+          yarn install --frozen-lockfile --force
 
       - name: Coverage
         run: yarn coverage
