--- a/.github/workflows/coverage-test.yml
+++ b/.github/workflows/coverage-test.yml
@@ -24,7 +24,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          yarn cache clean
+          rm yarn.lock
           yarn install --frozen-lockfile --force
 
       - name: Coverage
